<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="dispute_center">Dispute Center</string>
    <string name="settings">Settings</string>
    <string name="give_us_feedback">Give us Feedback</string>
    <string name="stickers">Stickers</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="side_drawer">Side Drawer</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>