<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/account"
        android:title="@string/dispute_center"
        android:icon="@drawable/warning"/>
    <item
        android:id="@+id/setting"
        android:title="@string/settings"
        android:icon="@drawable/settings"/>
    <item
        android:id="@+id/feedback"
        android:title="@string/give_us_feedback"
        android:icon="@drawable/feedback"/>
    <item
        android:id="@+id/sticker"
        android:title="@string/stickers"
        android:icon="@drawable/emoji"/>
    <item
        android:id="@+id/help"
        android:title="@string/help"
        android:icon="@drawable/help"/>
    <item
        android:id="@+id/log_out"
        android:title="@string/log_out"
        android:icon="@drawable/logout"/>
</menu>